[tool.poetry]
name = "docca-search"
version = "0.1.0"
description = ""
authors = ["kai <kaizhangwen@gmail.com>"]
readme = "README.md"
packages = [{include = "docca_search"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
